add get vote details apis
